--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckeditor/ckeditor5-build-classic",
-  "version": "15.0.0",
+  "version": "15.0.0-docs.1",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
     "ckeditor5-build",
@@ -89,6 +89,7 @@
     }
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^15.0.0",
     "@ckeditor/ckeditor5-font": "^15.0.0"
   }
 }
